<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlyBird</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start">开始</string>
    <string name="birdUp">上升</string>
    <string name="reset">初始化</string>
    <string name="setActivity">设置</string>
    <string name="resetStore">重置分数</string>
    <string name="mainActivityButStr">进入游戏</string>
     <string name="word1">我</string> 
  <string name="word2">听</string> 
  <string name="word3">别</string> 
  <string name="word4">人</string> 
  <string name="word5">说</string> 
  <string name="word6">这</string> 
  <string name="word7">世</string> 
  <string name="word8">界</string> 
  <string name="word9">上</string> 
  <string name="word10">有</string> 
  <string name="word11">一</string> 
  <string name="word12">种</string> 
  <string name="word13">鸟</string> 
  <string name="word14">是</string> 
  <string name="word15">没</string> 
  <string name="word16">有</string> 
  <string name="word17">脚</string> 
  <string name="word18">的</string> 
  <string name="word19">，</string> 
  <string name="word20">他</string> 
  <string name="word21">只</string> 
  <string name="word22">能</string> 
  <string name="word23">够</string> 
  <string name="word24">一</string> 
  <string name="word25">直</string> 
  <string name="word26">的</string> 
  <string name="word27">飞</string> 
  <string name="word28">呀</string> 
  <string name="word29">飞</string> 
  <string name="word30">呀</string> 
  <string name="word31">，</string> 
  <string name="word32">飞</string> 
  <string name="word33">累</string> 
  <string name="word34">了</string> 
  <string name="word35">就</string> 
  <string name="word36">在</string> 
  <string name="word37">风</string> 
  <string name="word38">里</string> 
  <string name="word39">面</string> 
  <string name="word40">睡</string> 
  <string name="word41">觉</string> 
  <string name="word42">，</string> 
  <string name="word43">这</string> 
  <string name="word44">种</string> 
  <string name="word45">鸟</string> 
  <string name="word46">一</string> 
  <string name="word47">辈</string> 
  <string name="word48">子</string> 
  <string name="word49">只</string> 
  <string name="word50">能</string> 
  <string name="word51">下</string> 
  <string name="word52">地</string> 
  <string name="word53">一</string> 
  <string name="word54">次</string> 
  <string name="word55">，</string> 
  <string name="word56">那</string> 
  <string name="word57">一</string> 
  <string name="word58">次</string> 
  <string name="word59">就</string> 
  <string name="word60">是</string> 
  <string name="word61">它</string> 
  <string name="word62">死</string> 
  <string name="word63">亡</string> 
  <string name="word64">的</string> 
  <string name="word65">时</string> 
  <string name="word66">候</string> 
  <string name="word67">。</string> 
  <string name="word68">--</string> 
  <string name="word69">《</string> 
  <string name="word70">阿</string> 
  <string name="word71">飞</string> 
  <string name="word72">正</string> 
  <string name="word73">传</string> 
  <string name="word74">》</string> 
    

</resources>
